@@ -8,7 +8,7 @@ product.version      0.1.2.1
 
 # which compiler to use; "modern" or "jikes" currently work
 # used by all javac tasks by default
-build.compiler       jikes
+build.compiler       modern
 
 # choose between debug and release builds
 build.type           debug
